background & btn-lg

--- a/templates/signup.html
+++ b/templates/signup.html
@@ -52,7 +52,7 @@
 </head>
 
 
-<body id="page-top" class="index" background="../static/img/background2.png" style="background-size: cover; background-repeat: no-repeat">
+<body id="page-top" class="index" background="../static/img/background2.jpg" style="background-size: cover; background-repeat: no-repeat">
 
     <!-- Navigation -->
     <nav class="navbar navbar-default navbar-fixed-top">
@@ -125,7 +125,7 @@
          <p style="padding-top: 20px"><input class="form-control" type="text" name="email" placeholder="Email"></p>
 <p><input class="form-control" type="password" name="password" placeholder="Password"></p>
  
- <p style="padding-top: 40px" class="submit" style="width: 200px; height: 65px; display: inline-block;" href="http://joobot-web.herokuapp.com/signing"><input type="submit" value="Sign-Up" class="btn btn-success btn-block">
+ <p style="padding-top: 40px" class="submit" style="width: 200px; height: 65px; display: inline-block;" href="http://joobot-web.herokuapp.com/signing"><input type="submit" value="Sign-Up" class="btn btn-success btn-block btn-lg">
 </form>
 
 
