--- a/templates/reset_password.html
+++ b/templates/reset_password.html
@@ -52,7 +52,7 @@
 </head>
 
 
-<body id="page-top" class="index" background="../static/img/background2.png" style="background-size: cover; background-repeat: no-repeat">
+<body id="page-top" class="index" background="../static/img/background2.jpg" style="background-size: cover; background-repeat: no-repeat">
 
     <!-- Navigation -->
     <nav class="navbar navbar-default navbar-fixed-top">
@@ -126,7 +126,7 @@
          <p style="padding-top: 20px"><input class="form-control" type="text" name="email" placeholder="Email"></p>
 
  
- <p style="padding-top: 40px" class="submit" style="width: 200px; height: 65px; display: inline-block;" href="http://dinero-web.heroku.com/send_new_pass"><input type="submit" value="Reset Password" class="btn btn-success btn-block">
+ <p style="padding-top: 40px" class="submit" style="width: 200px; height: 65px; display: inline-block;" href="http://dinero-web.heroku.com/send_new_pass"><input type="submit" value="Reset Password" class="btn btn-success btn-block btn-lg">
 </form>
 
 
