changed forgot_pass syntax

--- a/templates/joobot-login-failed.html
+++ b/templates/joobot-login-failed.html
@@ -95,7 +95,7 @@
 
 			
                     <div class="alert alert-danger">
- <strong>Login failed!</strong> <a href="http://joobot-web.herokuapp.com/reset_password" > forgot your password ? </a>
+ <strong>Login failed!</strong> <a href="http://joobot-web.herokuapp.com/reset_password" > forgot password ? Click Here!</a>
 </div>
 			
                  <!--   <img src="../static/img/login-pic.png" height="160" width="160"> -->
