--- a/templates/results.html
+++ b/templates/results.html
@@ -187,9 +187,9 @@ body {margin:0;}
       <div class="panel-body">
       	<!-- <div class="container">
          <div class="btn-group"> -->
-         <a href="http://joobot-web.herokuapp.com/results/cheap" class="btn btn-warning btn-block"><span class="glyphicon glyphicon-arrow-down" aria-hidden="true"></span>  Low-Cost</a>
-     <a href="http://joobot-web.herokuapp.com/results/freeshipping" class="btn btn-warning btn-block"><span class="glyphicon glyphicon-plane" aria-hidden="true"></span>  Free Shipping</a>
-     <a href="http://joobot-web.herokuapp.com/results/all" class="btn btn-warning btn-block"><span class="glyphicon glyphicon-globe" aria-hidden="true"></span>  All The Results</a>
+         <a href="http://joobot-web.herokuapp.com/results/cheap" class="btn btn-default btn-block"><span class="glyphicon glyphicon-arrow-down" aria-hidden="true"></span>  Low-Cost</a>
+     <a href="http://joobot-web.herokuapp.com/results/freeshipping" class="btn btn-default btn-block"><span class="glyphicon glyphicon-plane" aria-hidden="true"></span>  Free Shipping</a>
+     <a href="http://joobot-web.herokuapp.com/results/all" class="btn btn-default btn-block"><span class="glyphicon glyphicon-globe" aria-hidden="true"></span>  All The Results</a>
 
  </div>
        </div>
