--- a/templates/results.html
+++ b/templates/results.html
@@ -153,7 +153,7 @@ body {margin:0;}
                         <a href="http://joobot-web.herokuapp.com/marketplace"><i class="fa fa-users"></i>  Market Place</a>
                     </li>
                                                             <li class="page-scroll">
-                        <a href="http://joobot-web.herokuapp.com/logout"><i class="fa fa-sign-out" aria-hidden="true"></i>  Logout</a>
+                        <a href="http://joobot-web.herokuapp.com/logout" onclick="FB.logout();"><i class="fa fa-sign-out" aria-hidden="true"></i>  Logout</a>
                     </li>
 
                 </ul>
@@ -252,6 +252,9 @@ body {margin:0;}
 
     <!-- Custom Theme JavaScript -->
     <script src="../static/js/freelancer.js"></script>
+			
+			<!-- fb -->
+			<script src="https://connect.facebook.net/en_US/sdk.js"></script>
 
 
 	 <script type="../static/text/javascript" language="javascript" src="http://cdn.datatables.net/1.10.10/js/jquery.dataTables.min.js"></script>
