--- a/templates/results.html
+++ b/templates/results.html
@@ -153,7 +153,7 @@ body {margin:0;}
                         <a href="http://joobot-web.herokuapp.com/marketplace"><i class="fa fa-users"></i>  Market Place</a>
                     </li>
                                                             <li class="page-scroll">
-                        <a href="http://joobot-web.herokuapp.com/logout" onclick="FB.logout();"><i class="fa fa-sign-out" aria-hidden="true"></i>  Logout</a>
+                        <a href="http://joobot-web.herokuapp.com/logout" onclick="javascript:logout();"><i class="fa fa-sign-out" aria-hidden="true"></i>  Logout</a>
                     </li>
 
                 </ul>
